--- a/src/resources/config.properties
+++ b/src/resources/config.properties
@@ -6,12 +6,13 @@ path.page.login=/jsp/login.jsp
 path.page.main=/jsp/main.jsp
 path.page.error=/jsp/error/error.jsp
 path.page.parserout=/jsp/parserout.jsp
+path.page.registration=/jsp/registration.jsp
 path.xml.staff=source/staff.xml
 path.log4j.config=src/resources/log4j.properties
 
 
 ##############################
-db.url = jdbc:mysql://localhost:3306/epam
+db.url = jdbc:mysql://localhost:3306/web_project
 db.user = root
 db.password = asd
 db.useUnicode = true
