--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,12 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>WebProject</display-name>
+  <servlet>
+    <servlet-name>Controller</servlet-name>
+    <servlet-class>by.epam.web.application.controller.Controller</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Controller</servlet-name>
+    <url-pattern>/controller</url-pattern>
+  </servlet-mapping>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/jsp/error/error.jsp</location>
+  </error-page>
+  <error-page>
+    <exception-type>java.lang.RuntimeException</exception-type>
+    <location>/jsp/error/error.jsp</location>
+  </error-page>
+  <filter>
+    <filter-name>filterUTF8</filter-name>
+    <filter-class>by.epam.web.application.filter.EncodingFilter</filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>filterUTF8</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter>
+    <filter-name>redirectfilter</filter-name>
+    <filter-class>by.epam.web.application.filter.PageRedirectSecurityFilter</filter-class>
+    <init-param>
+      <param-name>INDEX_PATH</param-name>
+      <param-value>/index.jsp</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>redirectfilter</filter-name>
+    <url-pattern>/jsp/*</url-pattern>
+  </filter-mapping>
 </web-app>
