--- a/src/resources/log4j.properties
+++ b/src/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=info, file, console
+log4j.rootLogger=debug, file, console
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -17,4 +17,4 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.conversionPattern=%d{dd.MM.yyyy HH:mm:ss} [%t] %5p %c{1}:%M:%L - %m%n
 #log4j.appender.file.layout.conversionPattern=%d{dd.MM.yyyy HH:mm:ss} [%t] %5p %c - %M:%L - %m%n
 
-log4j.appender.console.layout.conversionPattern=%d{dd.MM.yyyy HH:mm:ss} [%t] %5p %c{1}:%M:%L - %m%n
+#log4j.appender.console.layout.conversionPattern=%d{dd.MM.yyyy HH:mm:ss} [%t] %5p %c{1}:%M:%L - %m%n
