--- a/src/resources/config.properties
+++ b/src/resources/config.properties
@@ -7,6 +7,7 @@ path.page.main_root=/jsp/root/main_root.jsp
 path.page.main_tutor=/jsp/tutor/main_tutor.jsp
 path.page.main_student=/jsp/student/main_student.jsp
 path.page.edit_user=/jsp/root/edit_user.jsp
+path.page.edit_test=/jsp/tutor/edit_test.jsp
 path.page.error=/jsp/error/error.jsp
 path.page.parserout=/jsp/parserout.jsp
 path.page.registration=/jsp/registration.jsp
