--- a/src/resources/config.properties
+++ b/src/resources/config.properties
@@ -8,6 +8,8 @@ path.page.main_tutor=/jsp/tutor/main_tutor.jsp
 path.page.main_student=/jsp/student/main_student.jsp
 path.page.edit_user=/jsp/root/edit_user.jsp
 path.page.edit_test=/jsp/tutor/edit_test.jsp
+path.page.edit_questions=/jsp/tutor/edit_questions.jsp
+path.page.edit_question=/jsp/tutor/edit_question.jsp
 path.page.error=/jsp/error/error.jsp
 path.page.parserout=/jsp/parserout.jsp
 path.page.registration=/jsp/registration.jsp
