home result page

--- a/src/resources/config.properties
+++ b/src/resources/config.properties
@@ -11,6 +11,7 @@ path.page.edit_test=/jsp/tutor/edit_test.jsp
 path.page.edit_questions=/jsp/tutor/edit_questions.jsp
 path.page.edit_question=/jsp/tutor/edit_question.jsp
 path.page.perform_test=/jsp/student/perform_test.jsp
+path.page.show_result=/jsp/student/show_result.jsp
 
 path.page.error=/jsp/error/error.jsp
 path.page.registration=/jsp/registration.jsp
