--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,6 +12,13 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  
+<jsp-config>
+<taglib>
+<taglib-uri>customtags</taglib-uri>
+<taglib-location>/WEB-INF/tld/custom.tld</taglib-location>
+</taglib>
+</jsp-config>
   <error-page>
     <error-code>404</error-code>
     <location>/jsp/error/error.jsp</location>
