--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry excluding="resources/|resources/" kind="src" path="src"/>
 	<classpathentry kind="src" path="src/resources"/>
-	<classpathentry kind="src" path="test.by.epam.project"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
@@ -15,5 +14,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/Ivan/Google Диск/Java_links - копия/LIBs_for_servlets/junit-4.10.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
