--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>Project</display-name>
   <servlet>
     <servlet-name>Controller</servlet-name>
@@ -12,12 +12,13 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
-  <jsp-config>
-    <taglib>
-      <taglib-uri>customtags</taglib-uri>
-      <taglib-location>/WEB-INF/tld/custom.tld</taglib-location>
-    </taglib>
-  </jsp-config>
+  
+<jsp-config>
+<taglib>
+<taglib-uri>customtags</taglib-uri>
+<taglib-location>/WEB-INF/tld/custom.tld</taglib-location>
+</taglib>
+</jsp-config>
   <error-page>
     <error-code>404</error-code>
     <location>/jsp/error/error.jsp</location>
@@ -50,14 +51,4 @@
     <filter-name>redirectfilter</filter-name>
     <url-pattern>/jsp/*</url-pattern>
   </filter-mapping>
-  
-  <filter>
-    <filter-name>controllerfilter</filter-name>
-    <filter-class>by.epam.project.filter.ServletSecurityFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>controllerfilter</filter-name>
-    <url-pattern>/controller</url-pattern>
-  </filter-mapping>
-  
 </web-app>
