--- a/src/resources/log4j.properties
+++ b/src/resources/log4j.properties
@@ -1,5 +1,5 @@
-log4j.rootLogger=debug, file, console
-#log4j.rootLogger=error, file
+#log4j.rootLogger=debug, file, console
+log4j.rootLogger=error, file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 
